objects/POC_Request__c/fields/POC_Request_Link__c.field-meta.xml
<CustomField>
    <fullName>POC_Request_Link__c</fullName>
    <description>Hyperlink to the POC Request.</description>
    <formula>HYPERLINK(&quot;/lightning/&quot;&amp;X18ID__c , &quot;POC Request Link&quot;)</formula>
    <label>POC Request Link</label>
    <type>Text</type>
</CustomField>