objects/POC_Request__c/fields/POC_Shadowing__c.field-meta.xml
<CustomField>
    <fullName>POC_Shadowing__c</fullName>
    <defaultValue>&quot;None&quot;</defaultValue>
    <description>Select who is shadowing</description>
    <inlineHelpText>Select who is shadowing</inlineHelpText>
    <label>POC Shadowing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tanium</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>