objects/POC_Request__c/fields/POC_Type__c.field-meta.xml
<CustomField>
    <fullName>POC_Type__c</fullName>
    <label>POC Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Extension</fullName>
            </value>
            <value>
                <fullName>Modify an existing/active POC license</fullName>
            </value>
            <value>
                <fullName>Partner IR/Assessment</fullName>
                <isActive>false</isActive>
                <label>Partner IR/Assessment</label>
            </value>
            <value>
                <fullName>QA</fullName>
                <isActive>false</isActive>
                <label>QA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>