objects/POC_Request__c/fields/Primary_Solution_Area__c.field-meta.xml
<CustomField>
    <fullName>Primary_Solution_Area__c</fullName>
    <description>This field allows the TSE team to identify the Primary solution area for the POC</description>
    <inlineHelpText>Please select the primary Solution Area that this POC will cover. If none of the above, select &quot;Unlisted&quot;.</inlineHelpText>
    <label>Primary Solution Area</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Asset &amp; Discovery</fullName>
            </value>
            <value>
                <fullName>Client Management</fullName>
            </value>
            <value>
                <fullName>Risk &amp; Compliance</fullName>
            </value>
            <value>
                <fullName>Sensitive Data Monitoring</fullName>
            </value>
            <value>
                <fullName>Threat Hunting</fullName>
            </value>
            <value>
                <fullName>Unlisted</fullName>
            </value>
            <value>
                <fullName>Vulnerability</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>