objects/POC_Request__c/fields/Processed_by__c.field-meta.xml
<CustomField>
    <fullName>Processed_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is for On-Prem &amp; TaaS Page Layout. For now, it&apos;s just a User lookup field and visible to only Deal Desk Profile.</description>
    <label>Processed by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>POC_Requests8</relationshipName>
    <type>Lookup</type>
</CustomField>