objects/POC_Request__c/fields/Product_Suites__c.field-meta.xml
<CustomField>
    <fullName>Product_Suites__c</fullName>
    <description>Used in Licensing email template and populated through the licensing tool, after the Licensing Event. Not on Page Layout.</description>
    <label>Product Suites</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>