objects/POC_Request__c/fields/Promo_Details__c.field-meta.xml
<CustomField>
    <fullName>Promo_Details__c</fullName>
    <formula>IF( ISPICKVAL( Promotion__c , &quot;Performance Promo (Expires 1/31/22)&quot;) , &quot;Performance Promo grants access to Performance module for 90-days, all other modules selected are capped at 30-days. Please call out desired duration for non-promo modules in the Additional Comments field.&quot;, &quot;NONE&quot;)</formula>
    <label>Promo Details</label>
    <type>Text</type>
</CustomField>