objects/POC_Request__c/fields/Promotion__c.field-meta.xml
<CustomField>
    <fullName>Promotion__c</fullName>
    <description>Please select any promotion that applies to this POC</description>
    <inlineHelpText>Please select any promotion that applies to this POC</inlineHelpText>
    <label>Promotion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ITFR</fullName>
            </value>
            <value>
                <fullName>Endpoint Hardening</fullName>
            </value>
            <value>
                <fullName>Benchmark Churn POC</fullName>
            </value>
            <value>
                <fullName>Japan Mythos Campaign</fullName>
            </value>
            <value>
                <fullName>ITSC</fullName>
                <isActive>false</isActive>
                <label>ITSC</label>
            </value>
            <value>
                <fullName>Performance Promo (Expires 1/31/22)</fullName>
                <isActive>false</isActive>
                <label>Performance Promo (Expires 1/31/22)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>