objects/POC_Request__c/fields/Protect__c.field-meta.xml
<CustomField>
    <fullName>Protect__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Protect</label>
    <type>Checkbox</type>
</CustomField>