objects/POC_Request__c/fields/Provision__c.field-meta.xml
<CustomField>
    <fullName>Provision__c</fullName>
    <defaultValue>false</defaultValue>
    <description>TBD</description>
    <inlineHelpText>TBD</inlineHelpText>
    <label>Provision</label>
    <type>Checkbox</type>
</CustomField>