objects/POC_Request__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <description>4/19/21: Change label from Number of End Points to Number of POC Endpoints</description>
    <inlineHelpText>Production: limited to maximum purchased seats. Lab: limited to
10% of purchased seats</inlineHelpText>
    <label>Number of POC Endpoints</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>