objects/POC_Request__c/fields/Related_Partner_Account__c.field-meta.xml
<CustomField>
    <fullName>Related_Partner_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Partner Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Partner</value>
        </filterItems>
        <filterItems>
            <field>$Source.Is_this_a_Partner_led_assessment__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>POC Requests (Related Partner Account)</relationshipLabel>
    <relationshipName>POC_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>