objects/POC_Request__c/fields/Reveal__c.field-meta.xml
<CustomField>
    <fullName>Reveal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reveal</label>
    <type>Checkbox</type>
</CustomField>