objects/POC_Request__c/fields/Risk__c.field-meta.xml
<CustomField>
    <fullName>Risk__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Benchmark</label>
    <type>Checkbox</type>
</CustomField>