objects/POC_Request__c/fields/Risk_Compliance_Plus__c.field-meta.xml
<CustomField>
    <fullName>Risk_Compliance_Plus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Risk &amp; Compliance Plus</label>
    <type>Checkbox</type>
</CustomField>