objects/POC_Request__c/fields/Risk_Compliance_Standard__c.field-meta.xml
<CustomField>
    <fullName>Risk_Compliance_Standard__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Risk &amp; Compliance Standard</label>
    <type>Checkbox</type>
</CustomField>