objects/POC_Request__c/fields/SAML2_compliant_Identity_Provider__c.field-meta.xml
<CustomField>
    <fullName>SAML2_compliant_Identity_Provider__c</fullName>
    <description>SAML2-compliant Identity Provider</description>
    <inlineHelpText>SAML2-compliant Identity Provider</inlineHelpText>
    <label>SAML2-compliant Identity Provider</label>
    <type>TextArea</type>
</CustomField>