objects/POC_Request__c/fields/Screen_Meet_Helper__c.field-meta.xml
<CustomField>
    <fullName>Screen_Meet_Helper__c</fullName>
    <description>Hyperlink to the internal Screen Meet information.</description>
    <formula>HYPERLINK(&quot;https://www.tanium.com/resources/tanium-and-screenmeet/&quot;, &quot;ScreenMeet, Investigate, Engage, and Performance work well together and provide a unified approach to endpoint management and security. Learn more here.&quot;)</formula>
    <inlineHelpText>Hyperlink to the internal Screen Meet information.</inlineHelpText>
    <label>Screen Meet Helper</label>
    <type>Text</type>
</CustomField>