objects/POC_Request__c/fields/Screen_Sharing__c.field-meta.xml
<CustomField>
    <fullName>Screen_Sharing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Screen Sharing</label>
    <type>Checkbox</type>
</CustomField>