objects/POC_Request__c/fields/Selected_Solutions__c.field-meta.xml
<CustomField>
    <fullName>Selected_Solutions__c</fullName>
    <description>Provides a list of the Solution fields that have been checked on the record. Jira ticket SS-12115</description>
    <formula>IF(Core_Plus__c,&apos;Core_Plus__c,&apos;, NULL) &amp;
IF(Core_Standard__c,&apos;Core_Standard__c,&apos;, NULL) &amp;
IF(Endpoint_Management_Plus__c,&apos;Endpoint_Management_Plus__c,&apos;, NULL) &amp;
IF(Endpoint_Management_Standard__c,&apos;Endpoint_Management_Standard__c,&apos;, NULL) &amp;
IF(Incident_Response__c,&apos;Incident_Response__c,&apos;, NULL) &amp;
IF(Risk_Compliance_Plus__c,&apos;Risk_Compliance_Plus__c,&apos;, NULL) &amp;
IF(Risk_Compliance_Standard__c,&apos;Risk_Compliance_Standard__c&apos;, NULL)</formula>
    <inlineHelpText>Provides a list of the Solution fields that have been checked on the record</inlineHelpText>
    <label>Selected Solutions</label>
    <type>Text</type>
</CustomField>