objects/POC_Request__c/fields/Server_Country__c.field-meta.xml
<CustomField>
    <fullName>Server_Country__c</fullName>
    <description>Formula field to populate the Server Deployment County.</description>
    <formula>Server_Deployment__r.Country__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Server Country</label>
    <type>Text</type>
</CustomField>