objects/POC_Request__c/fields/Server_Deployment__c.field-meta.xml
<CustomField>
    <fullName>Server_Deployment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to the Server Deployment object (records)</description>
    <inlineHelpText>Lookup field to the Server Deployment object (records).</inlineHelpText>
    <label>Server Deployment</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The Server Deployment selected does not meet filter criteria. The Server Deployment must be active, be on the same Account as this POC and can not be in POC/Pilot</errorMessage>
        <filterItems>
            <field>Server_Deployment__c.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <filterItems>
            <field>Server_Deployment__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <filterItems>
            <field>Server_Deployment__c.Type__c</field>
            <operation>notEqual</operation>
            <value>POC/Pilot</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Server_Deployment__c</referenceTo>
    <relationshipLabel>POC Requests</relationshipLabel>
    <relationshipName>POC_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>