objects/POC_Request__c/fields/Server_Deployment_Type__c.field-meta.xml
<CustomField>
    <fullName>Server_Deployment_Type__c</fullName>
    <description>Formula to populate the Type from the Server Deployment.</description>
    <formula>TEXT(Server_Deployment__r.Type__c)</formula>
    <label>Server Deployment Type</label>
    <type>Text</type>
</CustomField>