objects/POC_Request__c/fields/Server_Hostnames__c.field-meta.xml
<CustomField>
    <fullName>Server_Hostnames__c</fullName>
    <description>Populated by the Server Deployment After Insert Flow</description>
    <label>Server Hostnames</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>