objects/POC_Request__c/fields/Server_Names__c.field-meta.xml
<CustomField>
    <fullName>Server_Names__c</fullName>
    <description>INC0146084: Label Change</description>
    <inlineHelpText>If TaaS, please enter vanity name from TaaS Details section. Do NOT include cloud.tanium.com,
If On-Prem, Hostnames are required for Versions Below 7.4.6 (Comma Delimited Only).</inlineHelpText>
    <label>Hostnames</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>