objects/POC_Request__c/fields/Server_Version__c.field-meta.xml
<CustomField>
    <fullName>Server_Version__c</fullName>
    <description>Formmula to populate the Server Version from the Server Deployment.</description>
    <formula>Server_Deployment__r.Server_Version__c</formula>
    <label>Server Version</label>
    <type>Text</type>
</CustomField>