objects/POC_Request__c/fields/Solution_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Solution_Engineer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Populates the Solution Engineer from Account</description>
    <inlineHelpText>This field is updated from the Solution Engineer field on the related Account and used in the approval process. If blank, update the Solution Engineer field on the Account and edit/save the POC request to populate the field here.</inlineHelpText>
    <label>Solution Engineer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>POC_Requests9sk2</relationshipName>
    <type>Lookup</type>
</CustomField>