objects/POC_Request__c/fields/TaaS_Admin_email__c.field-meta.xml
<CustomField>
    <fullName>TaaS_Admin_email__c</fullName>
    <description>TaaS Admin email</description>
    <inlineHelpText>Only list one email as the admin, which should be a customer email.</inlineHelpText>
    <label>TaaS Admin email</label>
    <type>TextArea</type>
</CustomField>