objects/POC_Request__c/fields/TaaS_Admin_Email_Formula__c.field-meta.xml
<CustomField>
    <fullName>TaaS_Admin_Email_Formula__c</fullName>
    <description>This field is populated with this formula:
Related_Contact__r.Email</description>
    <formula>Related_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field is populated with a formula derived from other sources when needed.
Related_Contact__r.Email</inlineHelpText>
    <label>TaaS Admin Email Formula</label>
    <type>Text</type>
</CustomField>