objects/POC_Request__c/fields/TaaS_Region__c.field-meta.xml
<CustomField>
    <fullName>TaaS_Region__c</fullName>
    <description>TaaS Region</description>
    <inlineHelpText>TaaS Region</inlineHelpText>
    <label>TaaS Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>US-West-2 (United States)</fullName>
            </value>
            <value>
                <fullName>AP-Northeast-1 (Japan)</fullName>
            </value>
            <value>
                <fullName>EU-Central-1 (Germany)</fullName>
            </value>
            <value>
                <fullName>ap-southeast-2 (Australia)</fullName>
            </value>
            <value>
                <fullName>eu-west-2 (England)</fullName>
            </value>
            <value>
                <fullName>sa-east-1 (Brazil)</fullName>
            </value>
            <value>
                <fullName>ca-central-1 (Canada)</fullName>
            </value>
            <value>
                <fullName>US-West-2 (Oregon)</fullName>
            </value>
            <value>
                <fullName>AP-Northeast-1 (Tokyo)</fullName>
                <isActive>false</isActive>
                <label>AP-Northeast-1 (Tokyo)</label>
            </value>
            <value>
                <fullName>EU-Central-1 (Frankfurt)</fullName>
                <isActive>false</isActive>
                <label>EU-Central-1 (Frankfurt)</label>
            </value>
            <value>
                <fullName>US-West-2</fullName>
                <isActive>false</isActive>
                <label>US-West-2</label>
            </value>
            <value>
                <fullName>ap-southeast-1 (Singapore)</fullName>
                <isActive>false</isActive>
                <label>ap-southeast-1 (Singapore)</label>
            </value>
            <value>
                <fullName>ap-southeast-2 (Sydney)</fullName>
                <isActive>false</isActive>
                <label>ap-southeast-2 (Sydney)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>