objects/POC_Request__c/fields/TAM_Manager__c.field-meta.xml
<CustomField>
    <fullName>TAM_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DEPRECATED - TAM Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>POC_Requests6</relationshipName>
    <type>Lookup</type>
</CustomField>