objects/POC_Request__c/fields/TAM_Owner__c.field-meta.xml
<CustomField>
    <fullName>TAM_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DEPRECATED - TAM Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>POC_Requests7</relationshipName>
    <type>Lookup</type>
</CustomField>