objects/POC_Request__c/fields/TAN_220_DEV_Copper_Quantity__c.field-meta.xml
<CustomField>
    <fullName>TAN_220_DEV_Copper_Quantity__c</fullName>
    <label>TAN-DEV-220-CP: Quantity</label>
    <length>20</length>
    <type>Text</type>
</CustomField>