objects/POC_Request__c/fields/TAN_320_S_Copper_Quantity__c.field-meta.xml
<CustomField>
    <fullName>TAN_320_S_Copper_Quantity__c</fullName>
    <label>TAN-320-S-Copper : Quantity</label>
    <length>30</length>
    <type>Text</type>
</CustomField>