objects/POC_Request__c/fields/TAN_320_S_Fiber_Quantity__c.field-meta.xml
<CustomField>
    <fullName>TAN_320_S_Fiber_Quantity__c</fullName>
    <label>TAN-325-S-Fiber: Quantity</label>
    <length>20</length>
    <type>Text</type>
</CustomField>