objects/POC_Request__c/fields/TAN_420_M_Copper_Quantity__c.field-meta.xml
<CustomField>
    <fullName>TAN_420_M_Copper_Quantity__c</fullName>
    <label>TAN-420-M-Copper : Quantity</label>
    <length>30</length>
    <type>Text</type>
</CustomField>