objects/POC_Request__c/fields/TAN_420_M_Fiber_Quantity__c.field-meta.xml
<CustomField>
    <fullName>TAN_420_M_Fiber_Quantity__c</fullName>
    <label>TAN-425-M-Fiber: Quantity</label>
    <length>20</length>
    <type>Text</type>
</CustomField>