objects/POC_Request__c/fields/TAN_720_L_Copper_Quantity__c.field-meta.xml
<CustomField>
    <fullName>TAN_720_L_Copper_Quantity__c</fullName>
    <label>TAN-720-L-Copper: Quantity</label>
    <length>20</length>
    <type>Text</type>
</CustomField>