objects/POC_Request__c/fields/TAN_720_L_Fiber_Quantity__c.field-meta.xml
<CustomField>
    <fullName>TAN_720_L_Fiber_Quantity__c</fullName>
    <label>TAN-725-L-Fiber: Quantity</label>
    <length>20</length>
    <type>Text</type>
</CustomField>