objects/POC_Request__c/fields/TAN_920_XL_Copper_Quantity__c.field-meta.xml
<CustomField>
    <fullName>TAN_920_XL_Copper_Quantity__c</fullName>
    <label>TAN-920-XL-Copper: Quantity</label>
    <length>18</length>
    <type>Text</type>
</CustomField>