objects/POC_Request__c/fields/TAN_920_XL_Fiber_Quantity__c.field-meta.xml
<CustomField>
    <fullName>TAN_920_XL_Fiber_Quantity__c</fullName>
    <label>TAN-925-XL-Fiber: Quantity</label>
    <length>20</length>
    <type>Text</type>
</CustomField>