objects/POC_Request__c/fields/TAN_CLOUD_Quantity__c.field-meta.xml
<CustomField>
    <fullName>TAN_CLOUD_Quantity__c</fullName>
    <label>TAN-CLOUD : Quantity</label>
    <length>20</length>
    <type>Text</type>
</CustomField>