objects/POC_Request__c/fields/TAN_L_730_CP_Quantity__c.field-meta.xml
<CustomField>
    <fullName>TAN_L_730_CP_Quantity__c</fullName>
    <label>TAN-L-730-CP: Quantity</label>
    <length>20</length>
    <type>Text</type>
</CustomField>