objects/POC_Request__c/fields/TAN_L_735_FB_Quantity__c.field-meta.xml
<CustomField>
    <fullName>TAN_L_735_FB_Quantity__c</fullName>
    <label>TAN-L-735-FB: Quantity</label>
    <length>20</length>
    <type>Text</type>
</CustomField>