objects/POC_Request__c/fields/TAN_M_430_CP_Quantity__c.field-meta.xml
<CustomField>
    <fullName>TAN_M_430_CP_Quantity__c</fullName>
    <label>TAN-M-430-CP: Quantity</label>
    <length>20</length>
    <type>Text</type>
</CustomField>