objects/POC_Request__c/fields/TAN_M_435_FB_Quantity__c.field-meta.xml
<CustomField>
    <fullName>TAN_M_435_FB_Quantity__c</fullName>
    <label>TAN-M-435-FB: Quantity</label>
    <length>20</length>
    <type>Text</type>
</CustomField>