objects/POC_Request__c/fields/TAN_S_330_CP_Quantity__c.field-meta.xml
<CustomField>
    <fullName>TAN_S_330_CP_Quantity__c</fullName>
    <label>TAN-S-330-CP: Quantity</label>
    <length>20</length>
    <type>Text</type>
</CustomField>