objects/POC_Request__c/fields/TAN_S_335_FB_Quantity__c.field-meta.xml
<CustomField>
    <fullName>TAN_S_335_FB_Quantity__c</fullName>
    <label>TAN-S-335-FB: Quantity</label>
    <length>20</length>
    <type>Text</type>
</CustomField>