objects/POC_Request__c/fields/TAN_VIRTUAL_Quantity__c.field-meta.xml
<CustomField>
    <fullName>TAN_VIRTUAL_Quantity__c</fullName>
    <label>TAN-VIRTUAL : Quantity</label>
    <length>50</length>
    <type>Text</type>
</CustomField>