objects/POC_Request__c/fields/TAN_XL_930_CP_Quantity__c.field-meta.xml
<CustomField>
    <fullName>TAN_XL_930_CP_Quantity__c</fullName>
    <label>TAN-XL-930-CP: Quantity</label>
    <length>20</length>
    <type>Text</type>
</CustomField>