objects/POC_Request__c/fields/TAN_XL_935_FB_Quantity__c.field-meta.xml
<CustomField>
    <fullName>TAN_XL_935_FB_Quantity__c</fullName>
    <label>TAN-XL-935-FB: Quantity</label>
    <length>20</length>
    <type>Text</type>
</CustomField>