objects/POC_Request__c/fields/Tanium_EASM_Solution_Censys__c.field-meta.xml
<CustomField>
    <fullName>Tanium_EASM_Solution_Censys__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox for the POC Request to permission TAN-EXMGMT-EASM-CLOUD</description>
    <label>Tanium EASM Solution</label>
    <type>Checkbox</type>
</CustomField>