objects/POC_Request__c/fields/Tanium_Infrastructure_2__c.field-meta.xml
<CustomField>
    <fullName>Tanium_Infrastructure_2__c</fullName>
    <label>DEPRECATED - Tanium Infrastructure 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No – Customer</fullName>
                <label>No – Customer Provided</label>
            </value>
            <value>
                <fullName>Yes – Tanium as a Service</fullName>
            </value>
            <value>
                <fullName>Yes- Tanium -Virtual Appliance (OVA)</fullName>
                <label>Yes- Tanium -Virtual Appliance</label>
            </value>
            <value>
                <fullName>Yes- Tanium - Cloud</fullName>
                <label>Yes- Tanium - Cloud Appliance</label>
            </value>
            <value>
                <fullName>Yes- Tanium - Physical Appliance</fullName>
            </value>
            <value>
                <fullName>Yes - Tanium - Physical Appliance (Already Owned)</fullName>
            </value>
            <value>
                <fullName>No - Customer - Physical</fullName>
                <isActive>false</isActive>
                <label>No - Customer - Physical</label>
            </value>
            <value>
                <fullName>No - Customer - Virtual</fullName>
                <isActive>false</isActive>
                <label>No - Customer - Virtual</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>