objects/POC_Request__c/fields/Tanium_Infrastructure__c.field-meta.xml
<CustomField>
    <fullName>Tanium_Infrastructure__c</fullName>
    <inlineHelpText>Is Tanium Infrastructure needed for this POC? If No, then select &quot;No-Customer Provided&quot;</inlineHelpText>
    <label>Tanium Infrastructure Required</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>On-Prem</fullName>
            </value>
            <value>
                <fullName>Tanium as a Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>