objects/POC_Request__c/fields/Threat_Response__c.field-meta.xml
<CustomField>
    <fullName>Threat_Response__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Threat Response</label>
    <type>Checkbox</type>
</CustomField>