objects/POC_Request__c/fields/TitanKube_Integration__c.field-meta.xml
<CustomField>
    <fullName>TitanKube_Integration__c</fullName>
    <description>Formula to populate the Is Titankube Integration Required from the Server Deployment.</description>
    <formula>TEXT(Server_Deployment__r.Is_Titankube_Integration_Required__c)</formula>
    <label>TitanKube Integration</label>
    <type>Text</type>
</CustomField>