objects/POC_Request__c/fields/TRA_In_Use__c.field-meta.xml
<CustomField>
    <fullName>TRA_In_Use__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TRA In Use?</label>
    <type>Checkbox</type>
</CustomField>