objects/POC_Request__c/fields/TRA_Not_in_Use_Detail__c.field-meta.xml
<CustomField>
    <fullName>TRA_Not_in_Use_Detail__c</fullName>
    <label>TRA Not in Use Detail</label>
    <type>TextArea</type>
</CustomField>