objects/POC_Request__c/fields/Trace__c.field-meta.xml
<CustomField>
    <fullName>Trace__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trace</label>
    <type>Checkbox</type>
</CustomField>