objects/POC_Request__c/fields/TSE_AVP__c.field-meta.xml
<CustomField>
    <fullName>TSE_AVP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Populates the TSE Owner&apos;s AVP based on the Opportunity</description>
    <label>TSE AVP</label>
    <referenceTo>User</referenceTo>
    <relationshipName>POC_Requests5</relationshipName>
    <type>Lookup</type>
</CustomField>