objects/POC_Request__c/fields/TSE_RVP__c.field-meta.xml
<CustomField>
    <fullName>TSE_RVP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Populates the TSE Owner&apos;s RVP from Opportunity</description>
    <inlineHelpText>This field is updated from the Sales TAM Account Owner field and used in the approval process. If blank, update the Sales TAM Account Owner field on the opportunity and edit/save the POC request to populate the field here</inlineHelpText>
    <label>DEPRECATED - Sales TAM RVP</label>
    <referenceTo>User</referenceTo>
    <relationshipName>POC_Requests4</relationshipName>
    <type>Lookup</type>
</CustomField>